Slightly increase font size of scenario description text. Get rid of the rounded-edges card container on mobile, because it's visually distracting and a bit buggy on smartphone displays.

--- a/src/app/session/session.component.scss
+++ b/src/app/session/session.component.scss
@@ -28,7 +28,7 @@ mat-card {
       position: absolute;
       top: 10%;
       left: 10%;
-      margin:auto;
+      margin: auto;
       width: 80%;
       height: 50%;
       font-size: 1.2em;
@@ -38,12 +38,21 @@ mat-card {
       position: absolute;
       bottom: 30px;
       right: 10%;
-      margin:auto;
+      margin: auto;
       font-size: 1.2rem;
     }
+
     app-session-indicator-bar {
       width: 100%;
     }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  mat-card {
+    margin: 0 auto;
+    border-radius: 0;
+    box-shadow: none !important;
   }
 }
 
