--- a/src/app/statement/statement.component.scss
+++ b/src/app/statement/statement.component.scss
@@ -6,7 +6,7 @@ p {
 @media only screen and (max-width: 768px) {
 
   p {
-    font-size: 1rem;
+    font-size: 1.1rem;
     line-height: 1.5rem;
   }
 
